# manila-images

./: .gitignore  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
elements/cifs-server/: pkg-map
elements/cifs-server/install.d/: 68-cifs-server
elements/manila-images/install.d/: 60-network-interfaces
elements/manila-images/post-install.d/: 80-passwd  99-doc-cleanup
