[metadata]
name = manila-images
summary = Reproducible image builds for Manila
description-file =
    README.rst
author = Manila developers
author_email = openstack-dev@lists.openstack.org
license: Apache License (2.0)
home-page = https://git.openstack.org/cgit/openstack/manila-images
classifier =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.7
    Environment :: Console

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[files]
data_files =
    share/manila-image-elements = elements/*

[wheel]
universal = 1
